# forten

./: configure.ac
examples/: ohjeet.frt  rnl.frt  test.txt
man/: Makefile.am  forten.1
src/: Makefile.am  commands.cpp  commands.h  forten.cpp  forten.h
