#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([Forten], [0.1.0], [fergusq@kaivos.org])
AM_INIT_AUTOMAKE([Forten], [0.1.0])
AC_CONFIG_SRCDIR([src/commands.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE

# Checks for library functions.

AC_OUTPUT(Makefile src/Makefile man/Makefile)
